--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="msms.comp3350.main.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,32 +20,33 @@
         </activity>
         <activity
             android:name="msms.comp3350.presentation.MovieListActivity"
-            android:label="@string/title_activity_movies" >
+            android:label="@string/title_activity_movies">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="msms.comp3350.presentation.MovieListActivity" />
         </activity>
         <activity
             android:name="msms.comp3350.presentation.UserListActivity"
-            android:label="@string/title_activity_users" >
+            android:label="@string/title_activity_users">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="msms.comp3350.presentation.UserListActivity" />
         </activity>
         <activity
             android:name="msms.comp3350.presentation.MovieDisplayActivity"
-            android:label="@string/title_activity_movie_info" >
+            android:label="@string/title_activity_movie_info">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="msms.comp3350.presentation.MovieDisplayActivity" />
         </activity>
         <activity
             android:name="msms.comp3350.presentation.UserDisplayActivity"
-            android:label="@string/title_activity_movies" >
+            android:label="@string/title_activity_movies">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="msms.comp3350.presentation.UserDisplayActivity" />
         </activity>
+        <activity android:name="msms.comp3350.presentation.AddMovieActivity"></activity>
     </application>
 
 </manifest>
