--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
             android:name="msms.comp3350.presentation.MainActivity"
             android:label="@string/app_name">
@@ -46,7 +46,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="msms.comp3350.presentation.UserDisplayActivity" />
         </activity>
-        <activity android:name="msms.comp3350.presentation.AddMovieActivity"></activity>
+        <activity android:name="msms.comp3350.presentation.AddMovieActivity" />
+        <activity android:name="msms.comp3350.presentation.MovieSearch">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                        android:resource="@xml/searchable" />
+        </activity>
     </application>
 
 </manifest>
