--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="msms.comp3350.presentation.UserDisplayActivity" />
         </activity>
-        <activity android:name="msms.comp3350.presentation.AddMovieActivity"></activity>
+        <activity android:name="msms.comp3350.presentation.AddMovieActivity" />
+        <activity android:name="msms.comp3350.charts.ChartActivity"></activity>
     </application>
 
 </manifest>
