--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
                 android:value="msms.comp3350.presentation.UserDisplayActivity" />
         </activity>
         <activity android:name="msms.comp3350.presentation.AddMovieActivity" />
-        <activity android:name="msms.comp3350.charts.ChartActivity"></activity>
+        <activity android:name="msms.comp3350.charts.ChartActivity" />
+        <activity android:name="msms.comp3350.charts.PieChartActivity"></activity>
     </application>
 
 </manifest>
