SearchBar launches new activity
-> Changed "MovieSearch.java" to "MovieSearchActivity.java" for the sake of consistency
+ Submitting a search query in activity_movie_list's SearchBar now launches activity_movie_search

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
                 android:value="msms.comp3350.presentation.UserDisplayActivity" />
         </activity>
         <activity android:name="msms.comp3350.presentation.AddMovieActivity" />
-        <activity android:name="msms.comp3350.presentation.MovieSearch">
+        <activity android:name="msms.comp3350.presentation.MovieSearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
