--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
         </activity>
         <activity android:name="msms.comp3350.presentation.AddMovieActivity" />
         <activity android:name="msms.comp3350.charts.PieChartActivity" />
-        <activity android:name="msms.comp3350.charts.BarChartActivity"></activity>
+        <activity android:name="msms.comp3350.charts.BarChartActivity" />
+        <activity android:name="msms.comp3350.presentation.ReportList"></activity>
     </application>
 
 </manifest>
