Renamed reportLIst.java to reportListActivity.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         <activity android:name="msms.comp3350.presentation.AddMovieActivity" />
         <activity android:name="msms.comp3350.charts.PieChartActivity" />
         <activity android:name="msms.comp3350.charts.BarChartActivity" />
-        <activity android:name="msms.comp3350.presentation.ReportList"></activity>
+        <activity android:name="msms.comp3350.presentation.ReportListActivity"></activity>
     </application>
 
 </manifest>
