--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,15 @@
         </activity>
         <activity
             android:name="msms.comp3350.presentation.MovieListActivity"
-            android:label="@string/title_activity_movies">
+            android:label="@string/title_activity_movies"
+            android:iconifiedByDefault="false"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"
                 android:value="msms.comp3350.presentation.MovieListActivity" />
         </activity>
         <activity
@@ -45,13 +51,6 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="msms.comp3350.presentation.UserDisplayActivity" />
-        </activity>
-        <activity android:name="msms.comp3350.presentation.MovieSearchActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
-            </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                        android:resource="@xml/searchable" />
         </activity>
         <activity android:name="msms.comp3350.charts.BarChartActivity" />
         <activity android:name="msms.comp3350.presentation.ReportListActivity" />
