--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,13 @@
         </activity>
         <activity
             android:name="msms.comp3350.presentation.MovieListActivity"
-            android:label="@string/title_activity_movies"
             android:iconifiedByDefault="false"
+            android:label="@string/title_activity_movies"
             android:launchMode="singleTop">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable"
@@ -55,6 +56,7 @@
         <activity android:name="msms.comp3350.charts.BarChartActivity" />
         <activity android:name="msms.comp3350.presentation.ReportListActivity" />
         <activity android:name="msms.comp3350.charts.PieChartActivity" />
+        <activity android:name="msms.comp3350.presentation.DataDisplayActivity"></activity>
     </application>
 
 </manifest>
