--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="msms.comp.main">
+    package="msms.comp3350.main">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name="msms.comp.presentation.MainActivity"
+            android:name="msms.comp3350.presentation.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="msms.comp.presentation.MovieListActivity"
+            android:name="msms.comp3350.presentation.MovieListActivity"
             android:iconifiedByDefault="false"
             android:label="@string/title_activity_movies"
             android:launchMode="singleTop">
@@ -33,30 +33,30 @@
                 android:value="msms.comp3350.presentation.MovieListActivity" />
         </activity>
         <activity
-            android:name="msms.comp.presentation.UserListActivity"
+            android:name="msms.comp3350.presentation.UserListActivity"
             android:label="@string/title_activity_users">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="msms.comp.presentation.UserListActivity" />
+                android:value="msms.comp3350.presentation.UserListActivity" />
         </activity>
         <activity
-            android:name="msms.comp.presentation.MovieDisplayActivity"
+            android:name="msms.comp3350.presentation.MovieDisplayActivity"
             android:label="@string/title_activity_movie_info">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="msms.comp.presentation.MovieDisplayActivity" />
+                android:value="msms.comp3350.presentation.MovieDisplayActivity" />
         </activity>
         <activity
-            android:name="msms.comp.presentation.UserDisplayActivity"
+            android:name="msms.comp3350.presentation.UserDisplayActivity"
             android:label="@string/title_activity_user_info">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="msms.comp.presentation.UserDisplayActivity" />
+                android:value="msms.comp3350.presentation.UserDisplayActivity" />
         </activity>
-        <activity android:name="msms.comp.charts.BarChartActivity" />
-        <activity android:name="msms.comp.presentation.ReportListActivity" />
-        <activity android:name="msms.comp.charts.PieChartActivity" />
-        <activity android:name="msms.comp.presentation.DataDisplayActivity"></activity>
+        <activity android:name="msms.comp3350.charts.BarChartActivity" />
+        <activity android:name="msms.comp3350.presentation.ReportListActivity" />
+        <activity android:name="msms.comp3350.charts.PieChartActivity" />
+        <activity android:name="msms.comp3350.presentation.DataDisplayActivity"></activity>
     </application>
 
 </manifest>
